# tournament-simulator

./: LICENSE  README.md  TODO.md  pyproject.toml
examples/: double_round_robin_example.ipynb
src/tournament_simulator/dataclasses/: player.py  tournament.py
src/tournament_simulator/round_robin/: double_round_robin_tournament.py
