[tool.poetry]
name = "tournament-simulator"
version = "0.1.0"
description = "Tournament simulator for chess (or other sports)."
authors = ["Maj Gaberšček <majbc1999@gmail.com>"]
readme = "README.md"
packages = [
    { include = "tournament_simulator", from = "." }
]

[tool.poetry.dependencies]
python = "^3.11"
mypy = "1.10.1"
flake8 = "7.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"